<?xml version="1.0"?>
<package format="2">
  <name>tesseract_environment</name>
  <version>0.1.0</version>
  <description>The tesseract_environment package contains environment</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>

  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tesseract_collision</depend>
  <depend>tesseract_kinematics</depend>
  <depend>geometric_shapes</depend>
  <depend>kdl_parser</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
