<?xml version="1.0"?>
<package format="3">
  <name>tesseract_environment</name>
  <version>0.13.1</version>
  <description>The tesseract_environment package contains environment</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_geometry</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_state_solver</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_urdf</depend>
  <depend>tesseract_srdf</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>
  <test_depend>libomp-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
