<?xml version="1.0"?>
<package format="2">
  <name>tesseract_geometry</name>
  <version>0.14.0</version>
  <description>The tesseract_geometry package</description>
  <maintainer email="Armstrong@todo.todo">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>tesseract_common</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>assimp-dev</depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>octomap</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
