<?xml version="1.0"?>
<package format="2">
  <name>tesseract_kinematics</name>
  <version>0.1.0</version>
  <description>The tesseract_kinematics package contains kinematics related libraries.</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>

  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>liburdfdom-dev</depend>
  <depend>liburdfdom-headers-dev</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>roscpp</depend>
  <depend>kdl_parser</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
