<?xml version="1.0"?>
<package format="3">
  <name>tesseract_kinematics</name>
  <version>0.13.1</version>
  <description>The tesseract_kinematics package contains kinematics related libraries.</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_common</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_state_solver</depend>
  <depend>yaml-cpp</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>opw_kinematics</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>
  <test_depend>tesseract_urdf</test_depend>
  <test_depend>liblapack-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
